serial working without serial cpp lib

--- a/src/hotplatewatcher/Makefile
+++ b/src/hotplatewatcher/Makefile
@@ -3,7 +3,7 @@ ARDUINO_DIR =  /opt/arduino-1.0
 BOARD_TAG    = uno
 ARDUINO_PORT = /dev/ttyACM0
 
-ARDUINO_LIBS = SoftwareSerial
+ARDUINO_LIBS =
 
 AVR_TOOLS_PATH   = /usr/bin
 AVRDUDE_CONF     = /opt/arduino-1.0/hardware/tools/avrdude.conf
