--- a/src/hotplatewatcher/Makefile
+++ b/src/hotplatewatcher/Makefile
@@ -1,11 +1,6 @@
-ARDUINO_DIR =  /opt/arduino-1.0
+BOARD_TAG = uno
 
-BOARD_TAG    = uno
 ARDUINO_PORT = /dev/ttyACM0
-
 ARDUINO_LIBS =
 
-AVR_TOOLS_PATH   = /usr/bin
-AVRDUDE_CONF     = /opt/arduino-1.0/hardware/tools/avrdude.conf
-
-include Arduino.mk
+include /usr/share/arduino/Arduino.mk 
